applied built-in DT features: added button to export the currently visible state of the DT; added closing buttons for rows; added checkboxes for selecting columns and rows; allowed multiple cells selection; added buttons to sort data per column; used fixed headers option with vertical scroll; adjusted CSS styles for: table tooltips (unified style), per column buttons in the DT header (label in a new line, left-aligned spaced buttons)

--- a/_assets/css/mycss.css
+++ b/_assets/css/mycss.css
@@ -267,15 +267,15 @@ input {
 }
 
 #edition-items .accordion-body {
- padding: 1rem 0;
+  padding: 1rem 0;
 }
 
 #edition-items .accordion-button {
- padding: 0.5rem 1.25rem;
- min-width: fit-content;
- width: 25%;
- max-width: 100%;
- margin-bottom: 0.25rem;
+  padding: 0.5rem 1.25rem;
+  min-width: fit-content;
+  width: 25%;
+  max-width: 100%;
+  margin-bottom: 0.25rem;
 }
 
 #edition-items .accordion-item {
@@ -283,13 +283,45 @@ input {
 }
 
 .tooltip-inner {
-    background-color: #dcdcdc;
-    color: black;
-    font-size: 11px;
-    text-align: left;
-    width: 400px;
-    max-width: 400px;
+  background-color: #dcdcdc;
+  color: black;
+  font-size: 11px;
+  text-align: left;
+  width: 400px;
+  max-width: 400px;
 }
+
+.dash-table-tooltip {
+  background-color: #dcdcdc;
+  font-size: 12px;
+  text-align: center;
+  min-width: 200px;
+}
+
+/*DT header rows: setup for per-column buttons and label*/
+.dash-table-container .dash-spreadsheet-container .dash-spreadsheet-inner .dash-header > div {
+    display: flex !important;
+    flex-direction: column !important;
+}
+.dash-table-container .dash-spreadsheet-container .dash-spreadsheet-inner .dash-header .column-actions {
+    display: flex !important;
+    flex-direction: row !important;
+    align-items: center;
+    min-width: 90px;
+}
+.dash-table-container .dash-spreadsheet-container .dash-spreadsheet-inner .dash-header .column-header--select {
+    margin-right: 20px;
+}
+.dash-table-container .dash-spreadsheet-container .dash-spreadsheet-inner .dash-header .column-header--sort {
+    margin-right: 5px;
+}
+
+.dash-select-cell input[type="checkbox"] {
+  vertical-align: bottom !important;
+  left: 5px !important;
+}
+
+
 
 
 
